--- a/packages/nc-gui/ee/assets/style.scss
+++ b/packages/nc-gui/ee/assets/style.scss
@@ -3,7 +3,7 @@
 @import '@vue-flow/core/dist/theme-default.css';
 
 :root {
-  --sidebar-top-height: 11.6rem;
+  --sidebar-top-height: 10rem;
   --topbar-height: 3.1rem;
   --new-header-height: 3.5rem;
   --tw-text-opacity: 1;
@@ -87,6 +87,29 @@ main {
   }
   &::-webkit-scrollbar-thumb:hover {
     @apply bg-gray-300;
+  }
+}
+
+.nc-scrollbar-sm-dark {
+  overflow-y: scroll;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+  }
+  &::-webkit-scrollbar-track-piece {
+    width: 0px;
+  }
+  &::-webkit-scrollbar {
+    @apply bg-transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    width: 4px;
+    @apply bg-gray-300 ;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-400;
   }
 }
 
